# CellScope

./: .gitignore  CMakeLists.txt  COMPILE.md  app.rc.in  imgui.ini
_bmad/: config.toml  config.user.toml
_bmad-output/implementation-artifacts/: deferred-work.md  spec-add-greek-carrier-and-ue-details.md  spec-fix-decimfir-antialias-filter.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
src/: main.cpp  version.h
src/core/: app.h  default_layout.h  main_funcs.h
src/decode/: band_plan.cpp  band_plan.h  decoder.cpp  decoder.h  decoder_manager.cpp  decoder_manager.h  json_mini.cpp  json_mini.h  message_log.h  satellite_bands.h
src/decode/egc/: egc_decoder.cpp  egc_decoder.h
src/dsp/: ddc.h
src/gui/: gui_panels.cpp  waterfall.cpp
src/i18n/: i18n.cpp  i18n.h
src/lte/: lte_diag.cpp  lte_diag.h  lte_engine.cpp  lte_engine.h
src/sdr/: airspy_source.cpp  airspy_source.h  hackrf_source.cpp  hackrf_source.h  libresdr_source.cpp  libresdr_source.h  rtl_sdr_source.cpp  sdrpp_server_source.cpp  sdrpp_server_source.h
src/session/: session.cpp
src/signal/: processing.cpp
src/state/: config.cpp
src/update/: version_check.cpp  version_check.h
src/util/: log.cpp  log.h
src/voice/: voice_ops.cpp
tools/: audio_probe.cpp  decode_probe.cpp  decode_selftest.cpp  egc_decode.cpp  egc_inapp_test.cpp  fft_selftest.cpp  scan1200.cpp  synth_probe.cpp  twostage_test.cpp  voice_probe.cpp  wrap_final.py
